# 3d_collision_helpers

./: CMakeLists.txt  Changelog.md  README.md  conanfile.py
.forgejo/workflows/: release-and-assets.yml  unittest.yml
src/: sc_sacd.cpp  sc_sacd.h  sd_sacd.cpp  sd_sacd.h  test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
